syntax = "proto3";

package runtime.transport.v1;

option go_package = "github.com/origadmin/runtime/api/gen/go/runtime/transport/v1;transportv1";

// SelectorConfig defines the client-side node selection strategy.
message SelectorConfig {
  // version is a filter for the service version.
  // e.g., "v1.0.0"
  string version = 1;
}
